completed first randomstore implementation, added tests