@@ -3,7 +3,7 @@
  
   <groupId>com.qrypt</groupId>
   <artifactId>random-provider-project</artifactId>
-  <version>1</version>
+  <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   
   <modules>
@@ -16,24 +16,36 @@
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.13.2</version>
+        <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-inline</artifactId>
         <version>5.2.0</version>
-        <scope>compile</scope>      
+        <scope>test</scope>
     </dependency>
     <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-junit-jupiter</artifactId>
         <version>5.12.0</version>
-        <scope>compile</scope>
+        <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
       <version>2.11.0</version>
     </dependency>
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-core</artifactId>
+          <version>2.24.0</version>
+      </dependency>
+      <!-- If you want to use Log4J2 XML Configuration-->
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-1.2-api</artifactId>
+          <version>2.24.0</version>
+      </dependency>
   </dependencies>
 
   <build>
@@ -41,11 +53,16 @@
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.10.1</version> <!-- Use the latest version -->
+            <version>3.13.0</version> <!-- Use the latest version -->
             <configuration>
                 <source>11</source>
                 <target>11</target>
-                <release>11</release> <!-- Optional, ensures compatibility -->
+<!--                <release>11</release> &lt;!&ndash; Optional, ensures compatibility &ndash;&gt;-->
+                <compilerArgs>
+                    <arg>--add-exports</arg>
+                    <arg>java.base/sun.security.jca=ALL-UNNAMED</arg>
+                    <!-- include additional args here -->
+                </compilerArgs>
             </configuration>
         </plugin>    
         <plugin>
